--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "gatsby-plugin-offline": "^3.0.34",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-remark-embed-youtube": "0.0.7",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-prismjs": "^3.3.30",
+    "gatsby-remark-responsive-iframe": "^2.2.32",
     "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-remark": "^2.6.48",
+    "gatsby-transformer-remark": "^2.6.50",
     "gatsby-transformer-sharp": "^2.3.7",
     "prismjs": "^1.19.0",
     "prop-types": "^15.7.2",
