--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop -p 8001 -o",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "deploy": "gatsby build && firebase deploy"
   },
   "repository": {
     "type": "git",
